[gd_scene load_steps=10 format=3 uid="uid://ca41y5q73t00c"]

[ext_resource type="Script" uid="uid://dpkrl2b6qwbn3" path="res://scenes/menu/menu.gd" id="1_y1o0p"]
[ext_resource type="FontFile" uid="uid://c136a2vhcuyce" path="res://assets/fonts/Abaddon Bold.ttf" id="3_t0a87"]
[ext_resource type="Texture2D" uid="uid://c2pvrqjuryngb" path="res://assets/modern-ui mauro.png" id="4_qo0fc"]
[ext_resource type="LabelSettings" uid="uid://c8oxhpcf0ygjg" path="res://assets/label_text_theme.tres" id="5_r8yej"]
[ext_resource type="Theme" uid="uid://qajhb3xter4m" path="res://assets/rojo_button_theme.tres" id="5_t0a87"]
[ext_resource type="Theme" uid="uid://c6t26lejujvfl" path="res://assets/amarillo_button_theme.tres" id="6_r8yej"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m1spm"]
texture = ExtResource("4_qo0fc")
texture_margin_left = 10.0
texture_margin_top = 5.0
texture_margin_right = 10.0
texture_margin_bottom = 5.0
region_rect = Rect2(99, 3, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bx5ov"]
texture = ExtResource("4_qo0fc")
texture_margin_left = 10.0
texture_margin_top = 5.0
texture_margin_right = 10.0
texture_margin_bottom = 5.0
region_rect = Rect2(2, 2, 90, 26.9763)
modulate_color = Color(0.985281, 0.985281, 0.985281, 1)

[sub_resource type="Theme" id="Theme_t0a87"]
Button/font_sizes/font_size = 19
Button/fonts/font = ExtResource("3_t0a87")
Button/styles/hover = SubResource("StyleBoxTexture_m1spm")
Button/styles/normal = SubResource("StyleBoxTexture_bx5ov")

[node name="Menu" type="Node2D"]
script = ExtResource("1_y1o0p")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 651.0
color = Color(0.033853278, 0.033853278, 0.033853274, 1)

[node name="play" type="Button" parent="."]
offset_left = 537.0
offset_top = 451.0
offset_right = 668.0
offset_bottom = 512.0
theme = SubResource("Theme_t0a87")
text = "Play"

[node name="exit" type="Button" parent="."]
offset_left = 906.0
offset_top = 576.0
offset_right = 999.0
offset_bottom = 624.0
theme = ExtResource("5_t0a87")
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 1040.0
offset_top = 616.0
offset_right = 1099.0
offset_bottom = 639.0
text = "Version"
label_settings = ExtResource("5_r8yej")

[node name="creditos" type="Button" parent="."]
offset_left = 545.0
offset_top = 541.0
offset_right = 656.0
offset_bottom = 584.0
theme = ExtResource("6_r8yej")
text = "Credits"

[node name="Titulo" type="Sprite2D" parent="."]
position = Vector2(603, 223)
scale = Vector2(1.068, 1)

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="creditos" to="." method="_on_creditos_pressed"]
